# typomania

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: registry.rs
src/: corpus.rs  error.rs  harness.rs  lib.rs  package.rs
src/checks/: bitflips.rs  mod.rs  omitted.rs  repeated.rs  swapped.rs  testutil.rs  typos.rs  util.rs  version.rs
